init PaperSearch - custom search engine for academic papers
